# 2api-skill

./: README.md  SKILL.md
agents/: openai.yaml
assets/skeleton/: .gitignore  Dockerfile  README.md  config.toml.example  docker-compose.yml  pyproject.toml
assets/skeleton/app/: __init__.py  account.py  admin.py  auto_register.py  config.py  deps.py  events.py  http_log.py  logging_setup.py  main.py  orchestrator.py  refusal.py  streaming.py  system_sanitizer.py  tokens.py  tools.py
assets/skeleton/app/adapters/: __init__.py  anthropic_messages.py  openai_chat.py  openai_models.py  openai_responses.py
assets/skeleton/app/upstream/: __init__.py  account_fields.py  auth.py  base.py  client.py  models.py  parser.py  provider.py  token_store.py
assets/skeleton/registrar/: PROTOCOL.md  __init__.py  __main__.py  captcha.py  cli.py  email_client.py  http_client.py  models.py  pipeline.py
assets/skeleton/scripts/: __init__.py  e2e_chat.py  e2e_complex.py  e2e_models.py  e2e_tool.py  probe_catalog.py  probe_models.py
assets/skeleton/tests/: conftest.py  test_account.py  test_adapters.py  test_admin.py  test_auto_register.py  test_config.py  test_http_log.py  test_logging_setup.py  test_probe_catalog.py  test_refusal.py  test_registrar.py  test_streaming.py  test_system_sanitizer.py  test_token_store.py  test_tokens.py  test_tools.py  test_upstream.py
references/: api-endpoints.md  architecture.md  auth-and-errors.md  capture-flow.md  project-conventions.md  registrar-protocol.md  streaming.md  supabase-auth.md  testing.md  tokens-usage.md  tool-calls.md  (+1 more)
(+6 files in other folders)
