[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "{{Platform}} webchat → OpenAI/Anthropic-compatible local API gateway (2api)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic>=2.9",
    "tiktoken>=0.8",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "anthropic>=0.40",
    "openai>=1.50",
]
registrar = [
    "curl-cffi>=0.7",
    "playwright>=1.48,<1.60",
    "camoufox>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "registrar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
